--- a/admin/adminstyles.css
+++ b/admin/adminstyles.css
@@ -416,13 +416,6 @@ main .timetable.active .closeBtn{
 .attendance{
     margin-top: 2rem;
 }
-.attendance {
-    display: block !important;
-    visibility: visible !important;
-    opacity: 1 !important;
-    margin: 0 auto; /* Center alignment */
-}
-
 .attendance.h1{
     display: block !important;
     visibility: visible !important;
@@ -616,8 +609,8 @@ table th {
 button {
     padding: 10px 20px;
     border: none;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #f9f9f9;
+    color: #f9f9f9;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -706,14 +699,14 @@ button:hover {
 button {
     padding: 10px 20px;
     border: none;
-    background-color: #4CAF50;
-    color: white;
+    background-color: #f9f9f9;
+    color: #4CAF50;
     border-radius: 4px;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #f9f9f9;
 }
 
 /* Announcements List */
